Import data to application feature implemented, added items_import model(write methods for import file and validation,generate controller, added view for upload file, added pagination(using will_paginate gem) to the items page.)

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,14 +1,16 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Items</h1>
-<%= link_to 'Download Excel', items_path(format: :xlsx) %>
-
-<table>
+<%= link_to 'New Item', new_item_path, class: 'btn btn-primary' %>
+<%= link_to 'Download Excel', items_path(format: :xlsx), class: 'btn btn-primary' %>
+<%= link_to 'Upload Excel', new_items_import_path, class: 'btn btn-primary' %>
+<hr>
+<table border="2px">
   <thead>
     <tr>
       <th>Name</th>
       <th>Quantity</th>
-      <th colspan="3"></th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
 
@@ -24,7 +26,4 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Item', new_item_path %>
+<%= will_paginate @items %>
