added user instuction while uploading file(validations)

--- a/app/views/items_imports/new.html.erb
+++ b/app/views/items_imports/new.html.erb
@@ -6,8 +6,8 @@ Note: Only import spreadsheets that were previously downloaded from this
 
 <h3>Requirements</h3>
 <ul>
-  <li>Here you could list the validations you have in place for your model</li>
-  <li>That way your user has a better chance of successful import</li>
+  <li>Please Fill data in proper format to avoid errors.</li>
+  <li>Item name is required while filling data.</li>
 </ul>
 <hr>
 <%= link_to "Back", items_path %>
