--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -8,8 +8,8 @@
 <table border="2px">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Quantity</th>
+      <th><%= link_to "Name", sort: 'name' %></th>
+      <th><%= link_to "Quantity", sort: 'quantity' %></th>
       <th colspan="3">Actions</th>
     </tr>
   </thead>
